--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div class="content"></div>
+    <div class="app"></div>
   </body>
 </html>
